--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top">
+
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
     <div class="container">
       <a class="navbar-brand text-white" href="#">My Portfolio</a>
       <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -30,7 +30,7 @@
     </div>
   </nav>
 
-  <!-- Home -->
+ 
   <section id="home" class="section d-flex flex-column justify-content-center align-items-center text-center">
     <img src="aa.jpg" alt="Your Picture" class="profile-img mb-3">
     <h1>Hi, I'm <span>Anselmo Katigbak</span></h1>
@@ -39,7 +39,7 @@
     <a href="#about" class="btn btn-custom mt-4">Learn More</a>
   </section>
 
-  <!-- About -->
+
   <section id="about" class="section text-center">
   <div class="container">
     <h2 class="mb-4">About Me</h2>
@@ -66,7 +66,7 @@
 </section>
 
 
-  <!-- Projects -->
+
 <section id="projects" class="section text-center bg-dark">
   <div class="container">
     <h2 class="mb-5 text-white">Projects</h2>
@@ -79,9 +79,7 @@
           <div class="col-md-4 col-12">
             <img src="1.png" alt="Project Image 1" class="img-fluid rounded shadow-sm">
           </div>
-          <div class="col-md-4 col-12">
-            <img src="2.png" alt="Project Image 2" class="img-fluid rounded shadow-sm">
-          </div>
+          
           <div class="col-md-4 col-12">
             <img src="3.jpg" alt="Project Image 3" class="img-fluid rounded shadow-sm">
           </div>
@@ -100,13 +98,13 @@
   </div>
 </section>
 
-  <!-- Skills -->
+
 <section id="skills" class="section text-center">
   <div class="container">
     <h2 class="mb-5 text-white">Skills</h2>
 
     <div class="row justify-content-center text-start text-white">
-      <!-- Programming Languages -->
+ 
       <div class="col-md-4 mb-4">
         <h4 class="text-center mb-3">Programming Languages</h4>
         <div class="d-flex flex-wrap justify-content-center gap-2">
@@ -121,7 +119,7 @@
         </div>
       </div>
 
-      <!-- Frameworks & Technologies -->
+   
       <div class="col-md-4 mb-4">
         <h4 class="text-center mb-3">Frameworks & Technologies</h4>
         <div class="d-flex flex-wrap justify-content-center gap-2">
@@ -136,7 +134,7 @@
         </div>
       </div>
 
-      <!-- Databases -->
+
       <div class="col-md-4 mb-4">
         <h4 class="text-center mb-3">Databases</h4>
         <div class="d-flex flex-wrap justify-content-center gap-2">
@@ -149,13 +147,13 @@
 </section>
 
 
-  <!-- Contact -->
+
 <section id="contact" class="section text-center bg-dark py-5">
   <div class="container">
     <h2 class="mb-4 text-white">Contact</h2>
     <p class="text-light mb-4">Reach out for collaborations or opportunities!</p>
 
-    <!-- Social Icons -->
+
     <div class="d-flex justify-content-center gap-3 mb-4 flex-wrap">
       <a href="mailto:katigbakanselmo@gmail.com" class="text-white fs-4 contact-icon" title="Email"><i class="bi bi-envelope-fill"></i></a>
       <a href="https://www.facebook.com/ansel.katigbak" target="_blank" class="text-white fs-4 contact-icon" title="Facebook"><i class="bi bi-facebook"></i></a>
@@ -163,7 +161,7 @@
       <a href="tel:+639065557584" class="text-white fs-4 contact-icon" title="Phone"><i class="bi bi-telephone-fill"></i></a>
     </div>
 
-    <!-- Compact Contact Form (Formspree) -->
+
     <form action="https://formspree.io/demo" method="POST" class="mx-auto" style="max-width: 400px;">
       <input type="text" name="name" placeholder="Name" class="form-control mb-2" required>
       <input type="email" name="email" placeholder="Email" class="form-control mb-2" required>
@@ -171,7 +169,7 @@
       <button type="submit" class="btn btn-custom w-100">Send</button>
     </form>
 
-    <!-- View Resume Button -->
+ 
     <a href="KATIGBAK_ANSELMO.pdf" target="_blank" class="btn btn-outline-light px-3 py-2 mt-3">
       <i class="bi bi-file-earmark-person-fill me-1"></i> Résumé
     </a>
@@ -198,7 +196,55 @@
   });
 </script>
 
+<style>
+  
+#projects {
+  background-color: #1A2037;
+  padding: 60px 0;
+}
 
+
+#projects .row.g-3 {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px;
+  flex-wrap: wrap; 
+}
+
+#projects .col-md-4 {
+  flex: 0 0 45%; 
+  max-width: 45%;
+}
+
+#projects img {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  object-fit: cover;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#projects img:hover {
+  transform: scale(1.03);
+  box-shadow: 0 0 15px rgba(58, 151, 4, 0.3);
+}
+
+/* Cards and hover */
+#projects .card {
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#projects .card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 20px rgba(58, 151, 4, 0.3);
+}
+
+
+
+</style>
   <footer>
     <p>© 2025 Your Name. All rights reserved.</p>
   </footer>
